--- a/Project2/View/Text/SpacingTableViewCell.xib
+++ b/Project2/View/Text/SpacingTableViewCell.xib
@@ -12,16 +12,16 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="110" id="KGk-i7-Jjw" customClass="SpacingTableViewCell" customModule="Project2" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="439" height="110"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="146" id="KGk-i7-Jjw" customClass="SpacingTableViewCell" customModule="Project2" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="439" height="146"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="439" height="109.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="439" height="145.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1.3999999999999999" minValue="0.0" maxValue="6" translatesAutoresizingMaskIntoConstraints="NO" id="NVy-aM-PVz">
-                        <rect key="frame" x="138" y="16.5" width="243" height="31"/>
-                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <rect key="frame" x="138" y="38" width="243" height="31"/>
+                        <color key="tintColor" red="0.30588235294117649" green="0.47450980392156861" blue="0.46666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="OCs-MS-nYA"/>
                         </constraints>
@@ -30,14 +30,14 @@
                         </connections>
                     </slider>
                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="7" translatesAutoresizingMaskIntoConstraints="NO" id="RKK-cI-RGp">
-                        <rect key="frame" x="138" y="62.5" width="243" height="28"/>
-                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <rect key="frame" x="138" y="95.5" width="243" height="31"/>
+                        <color key="tintColor" red="0.30588235289999999" green="0.47450980390000003" blue="0.46666666670000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <connections>
                             <action selector="slideLetterSpacing:" destination="KGk-i7-Jjw" eventType="valueChanged" id="t6t-ZN-6OW"/>
                         </connections>
                     </slider>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Line height" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6T-5P-PZA">
-                        <rect key="frame" x="20" y="20" width="85" height="22.5"/>
+                        <rect key="frame" x="20" y="30" width="85" height="45.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="85" id="88m-6a-VN8"/>
                         </constraints>
@@ -46,7 +46,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Letter spacing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Mb-T4-KNi">
-                        <rect key="frame" x="20" y="62.5" width="110" height="27"/>
+                        <rect key="frame" x="20" y="95.5" width="110" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="110" id="8XS-6c-Na0"/>
                         </constraints>
@@ -55,7 +55,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbq-oy-ckr">
-                        <rect key="frame" x="389" y="16.5" width="30" height="30"/>
+                        <rect key="frame" x="389" y="38" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="o2B-Pd-rOT"/>
                             <constraint firstAttribute="height" constant="30" id="x4k-2l-ZlE"/>
@@ -65,14 +65,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LfU-bo-1l7">
-                        <rect key="frame" x="389" y="61" width="30" height="30"/>
+                        <rect key="frame" x="389" y="95.5" width="30" height="30"/>
                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="S6T-5P-PZA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="0uQ-1H-tsq"/>
+                    <constraint firstItem="S6T-5P-PZA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="30" id="0uQ-1H-tsq"/>
                     <constraint firstAttribute="bottom" secondItem="9Mb-T4-KNi" secondAttribute="bottom" priority="750" constant="20" id="36I-N7-gJq"/>
                     <constraint firstItem="NVy-aM-PVz" firstAttribute="leading" secondItem="RKK-cI-RGp" secondAttribute="leading" id="3SZ-ks-O8c"/>
                     <constraint firstItem="NVy-aM-PVz" firstAttribute="centerY" secondItem="pbq-oy-ckr" secondAttribute="centerY" id="EEM-in-QMj"/>
@@ -98,7 +98,7 @@
                 <outlet property="letterSpacingLabel" destination="LfU-bo-1l7" id="U11-o0-Dz4"/>
                 <outlet property="lineHeightLabel" destination="pbq-oy-ckr" id="0Ik-yM-J8n"/>
             </connections>
-            <point key="canvasLocation" x="204" y="182.60869565217394"/>
+            <point key="canvasLocation" x="204" y="198.80059970014995"/>
         </tableViewCell>
     </objects>
 </document>
